--- a/index.css
+++ b/index.css
@@ -1,57 +1,35 @@
 body{
-    background-color: black;
+    background-color: rgb(164, 158, 172);
 }
-section{
-    border: 1px solid red;
-    background-color: rgb(87, 216, 156);
-
+.header{
+    border: 1px solid yellow;
+    height: 10vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-header{
-    border: 1px solid rgb(42, 160, 77); 
-    height: 150px; 
-    background-color: rgb(148, 93, 22);
-    text-align: center;
-    margin: 10px;
-}
-div{
-    border: 1px solid rgb(42, 160, 77); 
-    height: 70px; 
-    margin-right: 1000px;
-    background-color: rgb(57, 22, 155);
-    text-align: center;
+.main{
+    border: 1px solid yellow;
     
-
 }
-
-main{
-    border: 1px solid rgb(42, 160, 77); 
-    height: 600px; 
+.footer{
+    border: 1px solid yellow;
+    height: 10vh;
+}
+.border{
+    border: 1px solid blue
+}
+.background{
     background-color: aqua;
-    
-    margin: 10px;
 }
+.menu1{
+    display: flex;
+    justify-content: space-evenly ;
+}
+.menuprincipal{
+    width: 40%;
 
-footer{
-    border: 1px solid rgb(42, 160, 77); 
-    height: 150px; 
-    background-color: rgb(250, 3, 56);
-    
-    margin: 10px;
 }
-article{
-    border: 1px solid rgb(42, 160, 77); 
-    height: 80px; 
-    background-color: rgb(187, 56, 56);
-    
-    margin: 10px;
+.item{
+    list-style: none;
 }
-.uno{
-    border: 1px solid rgb(42, 160, 77); 
-    height: 70px; 
-    margin-right: 1000px;
-    background-color: rgb(57, 22, 155);
-    text-align: center;
-}
-    
-
-
