--- a/Ejemplo.css
+++ b/Ejemplo.css
@@ -11,7 +11,7 @@ header{
     background-color: rgb(255, 255, 255);
     text-align: center;
     margin: 10px;
-    width: 98%;
+    width: 40%;
     
     
 }
@@ -75,10 +75,6 @@ nav{
 .menu1{
     display: flex;
     justify-content: space-evenly ;
-    width: 90%;
-}
-.menuprincipal{
-    width: 50%;
 }
 .item{
     list-style: none;
@@ -105,8 +101,6 @@ nav{
     background-color: rgb(255, 255, 255);
     width: 60%;
     margin: 10px;
-    display: flex;
-    
 }
 .ejemplos{
     border: 1px solid rgb(0, 0, 170); 
@@ -122,29 +116,18 @@ nav{
     margin: 10px;
     width: 400px;
 }
-
-.foto1{
-    margin-top: 20%;
-    margin-left: 20%;
-    height: 60%;
-    width: 60%;
+.border{
     border: 1px solid black;
-    border-radius: 20%;
+}
+.form{
+    margin: auto;
+    border: 1px rgb(194, 20, 7);
+    width: 40%;
+    margin-top: 10px;
+    margin-bottom: 10px;
     text-align: center;
 }
-.arti1{
-    border: 1px solid black;
-    height: 95%;
-    width: 49%;
-    margin: 5px;
-    margin-top: 2%;
-    margin-left: 1%;
+.felex{
+    display: flex;
+    flex-direction: column;
 }
-.arti2{
-    border: 1px solid black;
-    height: 95%;
-    width: 49%;
-    margin-top: 2%;
-    margin-right: 1%;
-}
-
