--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ body{
 }
 .footer{
     border: 1px solid yellow;
-    height: 10vh;
+    
 }
 .border{
     border: 1px solid blue
@@ -32,4 +32,40 @@ body{
 }
 .item{
     list-style: none;
+}
+.tittle{
+    max-width: 100%;
+    min-width: 20%;
+}
+.imagenes{
+    width: 50%;
+    margin: auto;
+    border: 1px solid black;
+}
+.video{
+    width: 100%;
+    margin: auto;
+    border: 1px solid black;
+    text-align: center;
+}
+.maloh{
+    max-width: 100%;
+    min-width: 50%;
+}
+.border{
+    border: 1px dotted black;
+}
+.shadow{
+    box-shadow: 15px 15px 20px 2px rgb(133, 133, 133);
+
+}
+body{
+    background-size: cover;
+    background-image: url(imagenes/photo-1538127426967-75a6c73f6d20.jfif);
+    background-repeat:no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+}
+:root{
+    --color_primario:red;
 }
